--- a/app/main/templates/main/index.html
+++ b/app/main/templates/main/index.html
@@ -23,6 +23,9 @@
     <a href="{{ url_for('auth.login') }}" class="btn-primary home-cta">
       Go to login demo
     </a>
+     <p class="home-secondary-link">
+    Or try the <a href="{{ url_for('main.feature') }}">Feature demo</a>.
+     </p>   
   </div>
 </section>
 
