--- a/app/auth/templates/auth/login.html
+++ b/app/auth/templates/auth/login.html
@@ -65,8 +65,8 @@
       </div>
 
       <div class="form-field">
-        {{ form.password.label(class="form-label") }}
-        {{ form.password(class="form-input") }}
+       {{ form.username.label(class="form-label") }}
+      {{ form.username(class="form-input") }}
       </div>
 
       <button type="submit" class="btn-primary">
